[gd_scene load_steps=6 format=2]

[ext_resource path="res://Prototype/VisualAssets/Player/PlayerPrototype.png" type="Texture" id=1]
[ext_resource path="res://Prototype/Scripts/Player/Storage/PlayerMovement.gd" type="Script" id=2]
[ext_resource path="res://Prototype/Scripts/Player/Storage/PlayerStorage.gd" type="Script" id=3]
[ext_resource path="res://Prototype/Scripts/Player/Storage/Sprite.gd" type="Script" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 8 )

[node name="PlayerStorage" type="KinematicBody2D"]
collision_layer = 8
collision_mask = 8
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
script = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 8 )
shape = SubResource( 1 )

[node name="PlayerMovement" type="Node2D" parent="."]
script = ExtResource( 2 )

[connection signal="moving_left" from="PlayerMovement" to="Sprite" method="_on_PlayerMovement_moving_left"]
[connection signal="moving_right" from="PlayerMovement" to="Sprite" method="_on_PlayerMovement_moving_right"]
[connection signal="stopped" from="PlayerMovement" to="Sprite" method="_on_PlayerMovement_stopped"]
